--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html manifest="offline.appcache">
 <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,6 @@
 	<meta name="HandheldFriendly" content="true" />
 	<meta name="mobile-web-app-capable" content="yes" />
 	<link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
-
 	<style type="text/css">
 		* {
 			padding: 0;
@@ -42,11 +41,13 @@
 	(function(){
 		if (window.location.protocol.substr(0, 4) === "file")
 		{
-			alert("Cannot run on file:/// ");
+			alert("Cannot run on file:/// protocol (browser security)");
 		}
 	})();
 	</script>
+	
 	<div id="gamecanvasdiv">
+	
 		<canvas id="gamecanvas" width="1000" height="1000">
 			<h1>Your browser does not appear to support HTML5.  Try upgrading your browser to the latest version.  <a href="http://www.whatbrowser.org">What is a browser?</a>
 			<br/><br/><a href="http://www.microsoft.com/windows/internet-explorer/default.aspx">Microsoft Internet Explorer</a><br/>
@@ -57,6 +58,7 @@
 		</canvas>
 		
 	</div>
+	
 	<script src="jquery-2.0.0.min.js"></script>
 	<script src="gamesc.js"></script>
 
@@ -84,4 +86,4 @@
 		
     </script>
 </body> 
-</html>
+</html> 
